# thai_traffic_deaths

./: .gitignore  README.md  eda.ipynb  pyproject.toml  requirements.txt
data/: _2554.csv  _2555.csv  _2556.csv  _2557.csv  _2558.csv  _2559.csv  _2560.csv  _2561.csv  _2562.csv  _2563.csv  _2564.csv  _2565.csv  _2566.csv  _2567.csv  _2568.csv  data-dictionary.xlsx  datapackage.json
output/: traffic_death_eda_report_2025-07-13.html
